# PoetryDemo

./: .gitignore  README.md
gcbq-explorer/: README.md
gcbq-explorer/bq_client/: bigquery_client.py
gcbq-explorer/gcbq_explorer/: check_existence.py
gcbq-explorer/tests/: testbigqueryclient.py  testcheckexistence.py  testmain.py
gcbq_explorer/: README.md  main.py  pyproject.toml
gcbq_explorer/bq_client/: bigquery_client.py  bigquery_dataset.py  bigquery_table.py  operator.py
gcs_explorer/: README.md
integer-operation/: README.md  pyproject.toml
integer-operation/integer_operation/: dosum.py
integer-operation/mathoperator/: operator.py  sumoperator.py
integer-operation/tests/: testdosum.py  testsumoperator.py
integer-sum/: README.md  pyproject.toml
integer-sum/integer_sum/: setup.py
integer-sum/mathoperator/: operator.py
integer-sum/tests/: testdosum.py  testoperator.py
poetry-demo/: pyproject.toml
